nftables setup-rules, squid setup

--- a/files/docker.override.conf
+++ b/files/docker.override.conf
@@ -2,5 +2,6 @@
 
 [Service]
 ExecStart=
-ExecStart=/usr/bin/dockerd --bridge=none --iptables=false -H unix:///var/run/docker.sock
+# using BOGON 'TEST-NET-2' to keep us from having random routing issues
+ExecStart=/usr/bin/dockerd --default-address-pool='base=198.51.100.0/24,size=28' --iptables=false -H unix:///var/run/docker.sock
 ExecStartPost=/usr/bin/systemctl reload nftables.service
