updated proxy-dnat rules

--- a/files/nftables/setup_prerouting_dnat.conf
+++ b/files/nftables/setup_prerouting_dnat.conf
@@ -1,2 +1,2 @@
-    ip daddr != $IP4_PROXY_EXCLUDES tcp dport { 80, 443 } dnat to 127.0.0.1:3130
-    ip6 daddr != $IP6_PROXY_EXCLUDES tcp dport { 80, 443 } dnat to 127.0.0.1:3130
+    ip daddr != $IP4_PROXY_EXCLUDES tcp dport $PORT_PROXY_INTERCEPT dnat to 127.0.0.1:$PORT_PROXY_TRANSPARENT
+    ip6 daddr != $IP6_PROXY_EXCLUDES tcp dport $PORT_PROXY_INTERCEPT dnat to 127.0.0.1:$PORT_PROXY_TRANSPARENT
