setup & transparent-proxy fixes

--- a/files/squid/main.conf
+++ b/files/squid/main.conf
@@ -8,16 +8,16 @@ shutdown_lifetime 5 seconds
 coredump_dir /var/spool/squid
 acl hasRequest has request
 logfile_rotate 0
-logformat custom_format %6tr %>a %Ss/%03Hs %<st %rm %ru %un %Sh/%<A %mt
-access_log /var/log/squid/access.log custom_format hasRequest
+logformat custom %>a %Ss/%03Hs %<st %rm %ru %un %Sh/%<A %mt
+access_log syslog:local2 custom hasRequest
 cache_log /var/log/squid/cache.log
 cache_store_log /var/log/squid/store.log
 cache_mem 64 MB
 forwarded_for off
 
 http_port 3128 ssl-bump tcpkeepalive=60,30,3 cert=/var/lib/squid/ssl/server.crt key=/var/lib/squid/ssl/server.key tls-dh=/var/lib/squid/ssl/bump.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
-http_port 3129 intercept ssl-bump tcpkeepalive=60,30,3 cert=/var/lib/squid/ssl/server.crt key=/var/lib/squid/ssl/server.key tls-dh=/var/lib/squid/ssl/bump.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
-https_port 3129 intercept ssl-bump tcpkeepalive=60,30,3 cert=/var/lib/squid/ssl/server.crt key=/var/lib/squid/ssl/server.key tls-dh=/var/lib/squid/ssl/bump.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
+http_port 3129 intercept tcpkeepalive=60,30,3 cert=/var/lib/squid/ssl/server.crt key=/var/lib/squid/ssl/server.key tls-dh=/var/lib/squid/ssl/bump.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
+https_port 3130 intercept ssl-bump tcpkeepalive=60,30,3 cert=/var/lib/squid/ssl/server.crt key=/var/lib/squid/ssl/server.key tls-dh=/var/lib/squid/ssl/bump.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
 
 acl CONNECT method CONNECT
 acl ssl_ports port 443
@@ -36,6 +36,10 @@ sslproxy_cert_error deny all
 tls_outgoing_options options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS min-version=1.1 default-ca=on cafile=/var/lib/squid/ssl/trusted_cas.crt
 
 # MAIN ACLS
+acl src_proto_ip6 src ipv6
+acl dst_proto_ip6 dst ipv6
+http_access deny src_proto_ip6 !all
+http_access deny dst_proto_ip6 !all
 acl dest_ports port 80
 acl dest_ports port 443
 http_access deny !dest_ports
@@ -44,12 +48,10 @@ acl src_internal src 127.0.0.0/8
 acl src_internal src 192.168.0.0/16
 acl src_internal src 172.16.0.0/12
 acl src_internal src 10.0.0.0/8
-http_access deny !src_internal
 
-acl dst_internal src 192.168.0.0/16
-acl dst_internal src 172.16.0.0/12
-acl dst_internal src 10.0.0.0/8
-http_access allow dst_internal
+acl dst_internal dst 192.168.0.0/16
+acl dst_internal dst 172.16.0.0/12
+acl dst_internal dst 10.0.0.0/8
 
 acl dom_box_repos dstdomain download.docker.com
 acl dom_box_repos dstdomain deb.debian.org
@@ -58,6 +60,9 @@ acl dom_box_repos dstdomain debian.map.fastlydns.net
 acl dom_box_repos dstdomain debian.map.fastly.net
 
 http_access allow src_internal dom_box_repos
+http_access allow src_internal dst_internal
+# not filtering ipv6 as we don't have any config-knowledge at this point
+http_access allow src_proto_ip6 dom_box_repos
 
 # IMPLICIT
 http_access deny all
