removed ssl-parameters on http-intercep-listener

--- a/files/squid/main.conf
+++ b/files/squid/main.conf
@@ -16,7 +16,7 @@ cache_mem 64 MB
 forwarded_for off
 
 http_port 3128 ssl-bump tcpkeepalive=60,30,3 cert=/var/lib/squid/ssl/server.crt key=/var/lib/squid/ssl/server.key tls-dh=/var/lib/squid/ssl/bump.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
-http_port 3129 intercept tcpkeepalive=60,30,3 cert=/var/lib/squid/ssl/server.crt key=/var/lib/squid/ssl/server.key tls-dh=/var/lib/squid/ssl/bump.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
+http_port 3129 intercept tcpkeepalive=60,30,3
 https_port 3130 intercept ssl-bump tcpkeepalive=60,30,3 cert=/var/lib/squid/ssl/server.crt key=/var/lib/squid/ssl/server.key tls-dh=/var/lib/squid/ssl/bump.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
 
 acl CONNECT method CONNECT
