--- a/files/squid/main.conf
+++ b/files/squid/main.conf
@@ -58,6 +58,7 @@ acl dom_box_repos dstdomain deb.debian.org
 acl dom_box_repos dstdomain security.debian.org
 acl dom_box_repos dstdomain debian.map.fastlydns.net
 acl dom_box_repos dstdomain debian.map.fastly.net
+acl dom_box_repos dstdomain raw.githubusercontent.com
 
 http_access allow src_internal dom_box_repos
 http_access allow src_internal dst_internal
