setup-script fixes & squid false-positive workaround

--- a/files/squid/main.conf
+++ b/files/squid/main.conf
@@ -14,6 +14,7 @@ cache_log /var/log/squid/cache.log
 cache_store_log /var/log/squid/store.log
 cache_mem 64 MB
 forwarded_for off
+host_verify_strict off  # false positives because of low DNS TTL
 
 http_port 3128 ssl-bump tcpkeepalive=60,30,3 cert=/var/lib/squid/ssl/server.crt key=/var/lib/squid/ssl/server.key tls-dh=/var/lib/squid/ssl/bump.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
 http_port 3129 intercept tcpkeepalive=60,30,3
