preparing ssl-cert handling, basic rsyslog & logrotate config

--- a/files/squid/main.conf
+++ b/files/squid/main.conf
@@ -1,4 +1,4 @@
-# ShieldWall
+# ShieldWall managed
 #   default squid config (unmanaged)
 #   for the managed config see: https://github.com/shield-wall-net/controller/tree/latest/templates/proxy
 
@@ -9,17 +9,17 @@ coredump_dir /var/spool/squid
 acl hasRequest has request
 logfile_rotate 0
 logformat custom %>a %Ss/%03Hs %<st %rm %ru %un %Sh/%<A %mt
-access_log syslog:local2 custom hasRequest
-cache_log /var/log/squid/cache.log
-cache_store_log /var/log/squid/store.log
+access_log syslog:local2.info custom hasRequest
+cache_log /var/log/shieldwall/squid_cache.log
+cache_store_log /var/log/shieldwall/squid_store.log
 cache_mem 64 MB
 forwarded_for off
 # false positives because of low DNS TTL
 host_verify_strict off
 
-http_port 3128 ssl-bump tcpkeepalive=60,30,3 cert=/var/lib/squid/ssl/server.crt key=/var/lib/squid/ssl/server.key tls-dh=/var/lib/squid/ssl/bump.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
+http_port 3128 ssl-bump tcpkeepalive=60,30,3 cert=/etc/ssl/certs/proxy.crt key=/etc/ssl/private/proxy.key tls-dh=/etc/ssl/private/proxy.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
 http_port 3129 intercept tcpkeepalive=60,30,3
-https_port 3130 intercept ssl-bump tcpkeepalive=60,30,3 cert=/var/lib/squid/ssl/server.crt key=/var/lib/squid/ssl/server.key tls-dh=/var/lib/squid/ssl/bump.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
+https_port 3130 intercept ssl-bump tcpkeepalive=60,30,3 cert=/etc/ssl/certs/proxy.crt key=/etc/ssl/private/proxy.key tls-dh=/etc/ssl/private/proxy.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
 
 acl CONNECT method CONNECT
 acl ssl_ports port 443
@@ -35,7 +35,7 @@ sslproxy_session_cache_size 25 MB
 sslproxy_session_ttl 900
 
 sslproxy_cert_error deny all
-tls_outgoing_options options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS min-version=1.1 default-ca=on cafile=/var/lib/squid/ssl/trusted_cas.crt
+tls_outgoing_options options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS min-version=1.1 default-ca=on cafile=/etc/ssl/certs/shieldwall.trusted_cas.crt
 
 # MAIN ACLS
 acl src_proto_ip6 src ipv6
@@ -61,6 +61,7 @@ acl dom_box_repos dstdomain security.debian.org
 acl dom_box_repos dstdomain debian.map.fastlydns.net
 acl dom_box_repos dstdomain debian.map.fastly.net
 acl dom_box_repos dstdomain raw.githubusercontent.com
+acl dom_box_repos dstdomain codeload.github.com
 
 http_access allow src_internal dom_box_repos
 http_access allow src_internal dst_internal
