--- a/files/nftables/setup_prerouting_dnat.conf
+++ b/files/nftables/setup_prerouting_dnat.conf
@@ -1,4 +1,4 @@
-    ip daddr != $IP4_PROXY_EXCLUDES tcp dport $PORT_PROXY_INTERCEPT_PLAIN dnat to 127.0.0.1:$PORT_PROXY_TRANSPARENT_PLAIN
-    ip6 daddr != $IP6_PROXY_EXCLUDES tcp dport $PORT_PROXY_INTERCEPT_PLAIN dnat to [::1]:$PORT_PROXY_TRANSPARENT_PLAIN
-    ip daddr != $IP4_PROXY_EXCLUDES tcp dport $PORT_PROXY_INTERCEPT_SSL dnat to 127.0.0.1:$PORT_PROXY_TRANSPARENT_SSL
-    ip6 daddr != $IP6_PROXY_EXCLUDES tcp dport $PORT_PROXY_INTERCEPT_SSL dnat to [::1]:$PORT_PROXY_TRANSPARENT_SSL
+    ip daddr != $IP4_NET_PROXY_EXCLUDES tcp dport $PORT_PROXY_INTERCEPT_PLAIN dnat to 127.0.0.1:$PORT_PROXY_TRANSPARENT_PLAIN
+    ip6 daddr != $IP6_NET_PROXY_EXCLUDES tcp dport $PORT_PROXY_INTERCEPT_PLAIN dnat to [::1]:$PORT_PROXY_TRANSPARENT_PLAIN
+    ip daddr != $IP4_NET_PROXY_EXCLUDES tcp dport $PORT_PROXY_INTERCEPT_SSL dnat to 127.0.0.1:$PORT_PROXY_TRANSPARENT_SSL
+    ip6 daddr != $IP6_NET_PROXY_EXCLUDES tcp dport $PORT_PROXY_INTERCEPT_SSL dnat to [::1]:$PORT_PROXY_TRANSPARENT_SSL
