setting default language, multiple fixes

--- a/files/rsyslog/forward.conf
+++ b/files/rsyslog/forward.conf
@@ -1,10 +1,10 @@
 # ShieldWall managed
 
 global(
-    DefaultNetStreamDriver="ossl"
+    DefaultNetStreamDriver="gtls"
     DefaultNetstreamDriverCAFile="/etc/ssl/certs/shieldwall.ca.crt"
-    DefaultNetstreamDriverCertFile="/etc/ssl/certs/shieldwall.crt"
-    DefaultNetstreamDriverKeyFile="/etc/ssl/private/shieldwall.key"
+    DefaultNetstreamDriverCertFile="/etc/ssl/certs/shieldwall.box.crt"
+    DefaultNetstreamDriverKeyFile="/etc/ssl/private/shieldwall.box.key"
 )
 
 *.* action(
