--- a/files/squid/main.conf
+++ b/files/squid/main.conf
@@ -14,8 +14,9 @@ cache_log /var/log/shieldwall/squid_cache.log
 cache_store_log /var/log/shieldwall/squid_store.log
 cache_mem 64 MB
 forwarded_for off
-# false positives because of low DNS TTL
 host_verify_strict off
+client_dst_passthru on
+dns_nameservers 127.0.0.1 1.1.1.1 8.8.8.8
 
 http_port 3128 ssl-bump tcpkeepalive=60,30,3 cert=/etc/ssl/certs/proxy.crt key=/etc/ssl/private/proxy.key tls-dh=/etc/ssl/private/proxy.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
 http_port 3129 intercept tcpkeepalive=60,30,3
