--- a/files/squid/main.conf
+++ b/files/squid/main.conf
@@ -17,6 +17,8 @@ forwarded_for off
 host_verify_strict off
 client_dst_passthru on
 dns_nameservers 127.0.0.1 1.1.1.1 8.8.8.8
+shutdown_lifetime 3 seconds
+http_access deny manager
 
 http_port 3128 ssl-bump tcpkeepalive=60,30,3 cert=/etc/ssl/certs/proxy.crt key=/etc/ssl/private/proxy.key tls-dh=/etc/ssl/private/proxy.dh.pem cipher=HIGH:MEDIUM:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS options=NO_SSLv3,NO_TLSv1,SINGLE_DH_USE,SINGLE_ECDH_USE
 http_port 3129 intercept tcpkeepalive=60,30,3
