--- a/files/metrics/prometheus_node_exporter.yml
+++ b/files/metrics/prometheus_node_exporter.yml
@@ -1,8 +1,9 @@
 ---
+# ShieldWall managed
 
 tls_server_config:
-  cert_file: node_exporter.crt
-  key_file: node_exporter.key
+  cert_file: '/etc/ssl/certs/shieldwall.box.crt'
+  key_file: '/etc/ssl/certs/shieldwall.box.key'
 
-basic_auth_users:
-  prometheus: <the-output-value-of-htpasswd>
+# basic_auth_users:
+#   prometheus: <the-output-value-of-htpasswd>
