--- a/files/netflow/shieldwall_netflow.service
+++ b/files/netflow/shieldwall_netflow.service
@@ -7,7 +7,7 @@ Documentation=https://github.com/netsampler/goflow2
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/goflow2 -listen 'netflow://127.0.0.1:2055' -format 'json' -transport 'file' -transport.file '/var/cache/shieldwall/netflow_data.flowlog' -loglevel 'warn' -workers 2
+ExecStart=/usr/local/bin/goflow2 -listen 'netflow://127.0.0.1:2055' -format 'json' -transport 'file' -transport.file '/var/cache/shieldwall/netflow_data.flowlog' -loglevel 'warn' -workers 2 -metrics.addr '127.0.0.1:9102'
 ExecReload=/bin/kill -HUP $MAINPID
 
 User=netflow
