--- a/files/netflow/softflowd_service_override.conf
+++ b/files/netflow/softflowd_service_override.conf
@@ -10,7 +10,7 @@ PartOf=shieldwall_netflow.service
 
 [Service]
 ExecStart=
-ExecStart=/usr/sbin/softflowd -i 'any' -p '/run/softflowd/%I.pid' -c '/run/softflowd/%I.ctl' -P 'udp' -n '127.0.0.1:2055' -v 9 -T 'full' -m 8192 -A 'sec' -t 'expint=1'
+ExecStart=/usr/sbin/softflowd -i 'any' -p '/run/softflowd/%I.pid' -c '/run/softflowd/%I.ctl' -P 'udp' -n '127.0.0.1:2055' -v 9 -T 'full' -m 8192 -t general='15s' -t maxlife='60s'
 
 Restart=on-failure
 RestartSec=10s
